# oak_math

./: LICENSE  func.cpp  func.h  mat.cpp  mat.h  math.h  meson.build  quat.cpp  quat.h  util.cpp  util.h  vec.cpp  vec.h
include/: osig_defs.h
include/oak_math/: func.h  func.inl  mat.h  mat.inl  math.h  quat.h  quat.inl  quat.reflect.h  vec.h  vec.inl
include/oak_math/detail/: defines.h
src/: func.cpp  mat.cpp  meson.build  quat.cpp  vec.cpp
